@@ -68,16 +68,19 @@ int
 main (int	  argc,
       char	**argv)
 {
-	ccss_stylesheet_t		*stylesheet;
-	ccss_style_t			*style;
-	node_t				 node;
-	GtkWidget			*window;
-	gboolean			 ret;
+	ccss_grammar_t		*grammar;
+	ccss_stylesheet_t	*stylesheet;
+	ccss_style_t		*style;
+	node_t			 node;
+	GtkWidget		*window;
+	gboolean		 ret;
 
 	gtk_init (&argc, &argv);
 	ccss_cairo_init ();
 
-	stylesheet = ccss_stylesheet_create_from_buffer (_css, sizeof (_css));
+	grammar = ccss_cairo_grammar_create ();
+	stylesheet = ccss_grammar_create_stylesheet_from_buffer (grammar,
+							_css, sizeof (_css));
 
 	ccss_node_init ((ccss_node_t *) &node, &_node_class);
 	node.type_name = "box";
@@ -106,6 +109,7 @@ main (int	  argc,
 
 	ccss_style_destroy (style);
 	ccss_stylesheet_destroy (stylesheet);
+	ccss_grammar_destroy (grammar);
 
 	ccss_cairo_shutdown ();
 
