@@ -36,14 +36,17 @@ url (GSList const	*args,
 {
 	char *cwd;
 	char *path;
+	char *uri;
 
 	g_return_val_if_fail (args && args->data, NULL);
 
 	cwd = g_get_current_dir ();
 	path = g_build_filename (cwd, args->data, NULL);
 	g_free (cwd), cwd = NULL;
+	uri = g_strdup_printf ("file://%s", path);
+	g_free (path), path = NULL;
 
-	return path;
+	return uri;
 }
 
 static ccss_function_t const _functions[] = 
@@ -56,17 +59,19 @@ int
 main (int	  argc,
       char	**argv)
 {
-	ccss_stylesheet_t		*stylesheet;
-	ccss_style_t			*style;
-	GtkWidget			*window;
-	gboolean			 ret;
+	ccss_grammar_t		*grammar;
+	ccss_stylesheet_t	*stylesheet;
+	ccss_style_t		*style;
+	GtkWidget		*window;
+	gboolean		 ret;
 
 	gtk_init (&argc, &argv);
 	ccss_cairo_init ();
-	ccss_add_functions (_functions);
 
-	stylesheet = ccss_stylesheet_create_from_buffer (_css, sizeof (_css));
-	/* stylesheet = ccss_stylesheet_create_from_file ("example-1.css"); */
+	grammar = ccss_cairo_grammar_create ();
+	ccss_grammar_add_functions (grammar, _functions);
+	stylesheet = ccss_grammar_create_stylesheet_from_buffer (grammar,
+							_css, sizeof (_css));
 
 	style = ccss_style_create ();
 	ret = ccss_stylesheet_query_type (stylesheet, "box", style);
@@ -88,6 +93,7 @@ main (int	  argc,
 
 	ccss_style_destroy (style);
 	ccss_stylesheet_destroy (stylesheet);
+	ccss_grammar_destroy (grammar);
 
 	ccss_cairo_shutdown ();
 
