@@ -18,7 +18,8 @@ typedef struct {
 } font_family_t;
 
 static ccss_property_base_t *
-font_family_new (CRTerm const *values)
+font_family_new (ccss_grammar_t	*grammar,
+		 CRTerm const	*values)
 {
 	font_family_t *self;
 
@@ -63,7 +64,7 @@ font_family_convert (font_family_t const	*self,
 	return false;
 }
 
-static ccss_property_class_t const _ptable[] = {
+static ccss_property_class_t const _properties[] = {
     {
 	.name = "font-family",
 	.property_create = (ccss_property_create_f) font_family_new,
@@ -82,7 +83,7 @@ static ccss_property_class_t const _ptable[] = {
 static ccss_property_class_t const *
 peek_property_class (void)
 {
-	return &_ptable[0];
+	return &_properties[0];
 }
 
 static gboolean
@@ -124,6 +125,7 @@ int
 main (int	  argc,
       char	**argv)
 {
+	ccss_grammar_t		*grammar;
 	ccss_stylesheet_t	*stylesheet;
 	ccss_style_t		*style;
 	GtkWidget		*window;
@@ -131,10 +133,11 @@ main (int	  argc,
 
 	gtk_init (&argc, &argv);
 	ccss_cairo_init ();
-	ccss_add_properties (_ptable);
 
-	stylesheet = ccss_stylesheet_create_from_buffer (_css, sizeof (_css));
-	/* stylesheet = ccss_stylesheet_create_from_file ("example-1.css"); */
+	grammar = ccss_cairo_grammar_create ();
+	ccss_grammar_add_properties (grammar, _properties);
+	stylesheet = ccss_grammar_create_stylesheet_from_buffer (grammar,
+							_css, sizeof (_css));
 
 	style = ccss_style_create ();
 	ret = ccss_stylesheet_query_type (stylesheet, "box", style);
@@ -156,6 +159,7 @@ main (int	  argc,
 
 	ccss_style_destroy (style);
 	ccss_stylesheet_destroy (stylesheet);
+	ccss_grammar_destroy (grammar);
 
 	ccss_cairo_shutdown ();
 
