@@ -59,16 +59,19 @@ int
 main (int	  argc,
       char	**argv)
 {
-	ccss_stylesheet_t		*stylesheet;
-	ccss_style_t			*style;
-	GtkWidget			*window;
-	gboolean			 ret;
+	ccss_grammar_t		*grammar;
+	ccss_stylesheet_t	*stylesheet;
+	ccss_style_t		*style;
+	GtkWidget		*window;
+	gboolean		 ret;
 
 	gtk_init (&argc, &argv);
 	ccss_cairo_init ();
-	ccss_add_functions (_functions);
 
-	stylesheet = ccss_stylesheet_create_from_buffer (_css, sizeof (_css));
+	grammar = ccss_cairo_grammar_create ();
+	ccss_grammar_add_functions (grammar, _functions);
+	stylesheet = ccss_grammar_create_stylesheet_from_buffer (grammar,
+							_css, sizeof (_css));
 
 	style = ccss_style_create ();
 	ret = ccss_stylesheet_query_type (stylesheet, "box", style);
@@ -90,6 +93,7 @@ main (int	  argc,
 
 	ccss_style_destroy (style);
 	ccss_stylesheet_destroy (stylesheet);
+	ccss_grammar_destroy (grammar);
 
 	ccss_cairo_shutdown ();
 
